# osaamiskiekko

./: .env.template  .gitignore  .gitignore.swp  Jenkinsfile  README.md  docker-compose-frontend.yml  docker-compose-robot.yml  docker-compose.frontend-unittests.yml  docker-compose.yml  makefile  package-lock.json  package.json  readme.md  sonar-project.properties
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md  convert2Yaml.js  makeDatabase.js  package-lock.json  package.json  requirements.txt  strapi.sh
backend/cms/: .gitignore  README.md  package-lock.json  package.json
backend/data/: academicdegrees.json  competencedegreelinks.json  competences.json  fieldofstudies.json  nqfs.json  organizations.json  pages.json  schools.json
backend/data/academicdegrees/: 00001.yaml  00002.yaml  00003.yaml  00004.yaml  00005.yaml  00006.yaml  00007.yaml  00008.yaml  00009.yaml  00010.yaml  00011.yaml  00012.yaml  00013.yaml  00014.yaml  00015.yaml  00016.yaml  00017.yaml  00018.yaml  00019.yaml  00020.yaml  00021.yaml  00022.yaml  00023.yaml  00024.yaml  (+15 more)
backend/firebase/: .firebaserc  README.md
backend/postgre/: 00_clear.sql  01_schema.sql  02_testdata.sql  dump.sql  dump_dataonly.sql
backend/rules/: blacklist-keywords.txt  blacklist-ngrams.txt  whitelist.txt
backend/scripts/: eperusteet_formal.py  eperusteet_hobby.py  eperusteet_lukio.py  field_aliases.py  generate_matrix.py  load_eperusteet.py  load_fields.py  matching.py  parse.py  parser_utils.py  process_amk.py  process_eperusteet.py  utils.py
backend/src/: database.rs  lib.rs  mongo_collections.rs
(+1277 files in other folders)
