[package]
name = "osaamiskiekko"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "health"
path = "src/bin/health.rs"

[dependencies]
proc-macro2 = "1.0.60"  # temporary dependency issue
axum = "0.6"
bytes = "1.1.0"
futures = "0.3"
mongodb = "2.2.0"
rand = "0.8"
reqwest = { version = "0.11.10", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"]  }
tracing = "0.1"
tracing-subscriber = "0.2"
